[package]
name = "mutable-bson"
description = "Support efficient mutation of binary coded BSON messages."
version = "0.1.0"
edition = "2024"
authors = ["Trevor McCulloch <mccullocht@gmail.com>"]
license = "MIT"

[dependencies]
bson = "2.14.0"
bytes = "1.10.1"
indexmap = "2.8.0"
itoa = "1.0.15"
serde = { version = "1.0.219", features = ["derive"] }
